syntax = "proto3";

option go_package = "github.com/myuser/myrepo/proto/helloworld";
package helloworld;

import "google/api/annotations.proto";
// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc Lala (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/example/lala"
    };
  }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}